--- a/front/package.json
+++ b/front/package.json
@@ -9,11 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "ethers": "^6.10.0",
+    "ethers": "^5.6.8",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
-    "wagmi": "0.4.4"
+    "wagmi": "^0.5.10"
   },
   "devDependencies": {
     "@types/node": "^20",
