--- a/front/package.json
+++ b/front/package.json
@@ -13,6 +13,7 @@
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
+    "snarkjs": "^0.7.4",
     "wagmi": "^0.5.10"
   },
   "devDependencies": {
